<resources>
    <string name="app_name">Vendor-Shopping-Point</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="s_pref_name">com.shopping_point.vendor_shopping_point</string>
    <string name="s_pref_login_status">com.shopping_point.vendor_shopping_point</string>
    <string name="s_pref_login_name">sh_pref_login_name</string>
    <string name="s_pref_login_email">sh_pref_login_email</string>
    <string name="s_pref_login_date">sh_pref_login_date</string>
    <string name="new_here_create_an_account">New User? <font color='#008CFF'>Create an Account</font></string>
    <string name="splash">Splash screen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="delete_account">Delete Account</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="new_customer_create_your_account">New Customer? <font color='#008CFF'>Create Your Account</font></string>
    <string name="_2020_shoppingpoint" />
    <string name="eight_characters">Password must be eight characters.</string>
    <string name="create_your_account">Sign up</string>
    <string name="sign_in_already_a_customer">Already a member?<font color='#008CFF'> Sign-in</font></string>
    <string name="enter_at_least_3_characters">Enter at least 3 characters</string>
    <string name="email_required">Email Required</string>
    <string name="enter_a_valid_email_address">Enter a valid email address</string>
    <string name="password_required">Password Required</string>
    <string name="password__at_least_8_characters">Password should be at least 8 characters</string>
    <string name="loading">loading...</string>
    <string name="Phone_Required">Phone Required</string>
    <string name="Name_Required">Organisation Name Required</string>
    <string name="conform_password">Confirm Password</string>
    <string name="contact">Contact No</string>
    <string name="shoping_point">Shopping Point</string>
    <string name="save">Save</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="shoppingpoint.com">info@shopingpoint.com</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="news_feed">News Feed</string>
    <string name="add_product">Add Product</string>
    <string name="notification">Notifications</string>
    <string name="setting">Settings</string>
    <string name="languages">Languages</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="hindi"> Hindi</string>
    <string name="all_removed">All Products removed from History</string>
    <string name="hi_how_can_we_help">Hi! How Can We Help?</string>
    <string name="help_center">Help Center</string>
    <string name="inquiryOne">I was charged extra shipping charges?</string>
    <string name="answerOne">Shopping Point does not charge customers any extra shipping charges. All applicable charges are mentioned in the invoice. Please make sure to check the item price plus the shipping charges at the checkout page before completing your purchase.\n\nIf the courier representative demands or has charged you more than the amount mentioned on your order invoice, please contact Customer Service immediately for assistance.</string>
    <string name="inquiryTwo">Where is My Order?</string>
    <string name="answerTwo">Your order will be delivered by the expected date specified on your order. The expected delivery date is the date on or before which you can reasonably expect the item to arrive at your preferred shipping address.\n\nYou\'ll see an expected delivery date for each shipment on the order summary, just before you place your order. The expected delivery date will also appear in My Orders section of your account after you\'ve placed your order.</string>
    <string name="inquiryThree">Tracking Your Shipment?</string>
    <string name="answerThree">Tracking your shipment is very easy on info@shopingpoint.com. You can use the link sent to you via SMS on your registered mobile phone number or on your registered email address to track where your order currently is. Additionally, you can also login to your info@shopingpoint.com account to track your orders as follows:\n\n1. Log in to info@shopingpoint.com account using your registered email address and password.\n\n2. Click on your name displayed on the top right-hand corner of the page.\n\n3. Click on My Order from the drop down menu.\n\n4. Locate your order on the screen.\n\n5. Click on Track Shipment against the shipment you want to know the status of.\n\n6. The pop-up screen will show where the order currently is along with a shipment tracking number for your reference.</string>
    <string name="inquiryFour">Item Was Not Available At The Designated Location?</string>
    <string name="answerFour">If you have selected the option of Self-Pick Up for your order, then once the item has reached its designated hub or location, you will receive a confirmation SMS on the number provided in the order that the item is ready to be collected. Once the item is at its designated hub or location and the SMS notification is issued, the item will be available for collection for 4 working days. If you experience any problems collecting your item from the designated hub or location, please contact Customer Support for assistance.</string>
    <string name="inquiryFive">Why I got multiple shipments for same order?</string>
    <string name="answerFive">When you purchase products from different sellers in an order, each seller will have a separate shipment and the product or products from each seller will be delivered to you separately. If you want to have all of the items shipped in one shipment, you will have to place the order for all items from the same seller.</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New Password</string>
    <string name="re_type_new_password">Re-type new password</string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_password">Change Password</string>
    <string name="password_not_match">Password Does not match</string>
    <string name="enter_current_password">Please Enter your current password</string>
    <string name="authentication_required">Authentication Required</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="description2">For your security, we need to authenticate your request. We\'ve sent a code from <b>Shoping Point</b> to the email %1$s. Please enter it below.</string>
    <string name="enter_your_email">Please Enter your correct email</string>
    <string name="incorrect_code">Incorrect Code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="counter">60</string>
    <string name="you_have_exceeded_number_of_requests">You have exceeded number of requests.</string>
    <string name="proceed">Continue</string>
    <string name="email_address">Email Address</string>
    <string name="password_assistance">Password assistance</string>
    <string name="enter_the_email_address_associated_with_your_account">Enter the email address associated with your account.</string>
    <string name="poster">poster</string>
    <string name="delete_my_account">Delete account</string>
    <string name="take_picture">Take Picture</string>
    <string name="use_gallery">Use Gallery</string>
    <string name="choose_profile_picture">Choose profile Picture</string>
    <string name="want_to_exit">Do you really want to exit?</string>
    <string name="ok">OK</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="my_products">My Products</string>
    <string name="activate_products">Activate Products</string>
    <string name="add_products">Add Products</string>
    <string name="add_image">Add Image</string>
    <string name="upload_to_server">Upload</string>
    <string name="faq">FAQ\'s</string>
    <string name="update_profile">Update Profile</string>
    <string name="update">Update</string>
    <string name="about">About</string>
    <string name="desc3"><b>Developed by TeamShoppy - Pune, India</b></string>
    <string name="version">Version</string>
    <string name="check_update">Check for update</string>
    <string name="feedback">Feedback</string>
    <string name="desc_feedback">to report technical issues or suggest new features.</string>
    <string name="try_amp_buy_at_home"><font color='#008CFF'>Try </font>&amp;<font color='#008CFF'> Buy</font> at home.</string>
    <string name="desc_about">Shopping point application that gives you the facility of virual trial room.</string>
    <string name="check_updates">Tap here to check for updates.</string>
    <string name="version_build">Version 0.0.1 Build 1</string>
    <string name="help">Help</string>
    <string name="desc_feedback_link"><font color='#008CFF'>Click here </font></string>
    <string name="pass_authentication">Password Authentication</string>
    <string name="passs_authentication">Password Authentication</string>
    <string name="logout">Logout</string>
    <string name="add_banner">Promotion</string>
    <string name="about_app">About App</string>
    <string name="shopping_point">Shopping Point</string>
    <string name="deactivate_your_account">Deactivate Your Account</string>
    <string name="be_the_face_of_application">Be the face of application!</string>
    <string name="select_image">Select image</string>
    <string name="image_of_product">Image Of Product</string>
    <string name="add_something_new">Add something new!</string>
    <string name="great_companies_are_built_on_great_products">Great companies are built on great products..</string>
    <string name="product_name">Product Name</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="price">Price</string>
    <string name="enter_price">Enter Price</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="add_description">Add Description</string>
    <string name="brand">Brand</string>
    <string name="enter_brand_name">Enter Brand Name</string>
    <string name="quantity">Quantity</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="we_missed_you_login_to_get_started">We missed you! Login to get started</string>
    <string name="login">Login</string>
    <string name="keep_your_password_safe">Keep your password safe!</string>
    <string name="become_a_member">Become A Member</string>
    <string name="just_one_more_step">Just one more step!!</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="it_s_time_to_update_your_profile_information">It\'s time to update your profile information!</string>
    <string name="update_profile_photo">Update profile photo</string>
    <string name="nike">Nike</string>
    <string name="vendor_dashboard">Vendor Dashboard</string>
    <string name="start_selling_now">Start selling now</string>
    <string name="active_dactivate">Active/Dactivate</string>
</resources>