<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notification" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/setting" />






            <item
                android:id="@+id/nav_myAccount"
                android:icon="@drawable/ic_account"
                android:title="@string/my_account" />

            <item
                android:id="@+id/nav_newsFeed"
                android:icon="@drawable/ic_newsfeed"
                android:title="@string/news_feed" />



</menu>

