<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.AddProductActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen160dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen160dp"
                android:background="@drawable/custom_back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/dimen20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/add_something_new"
                android:textColor="#ffff"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/great_companies_are_built_on_great_products"
                android:textColor="#ffff"
                android:textSize="16sp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20dp"
                android:layout_marginBottom="@dimen/dimen20dp"
                android:elevation="@dimen/dimen10dp"
                app:cardCornerRadius="@dimen/dimen20dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="582dp"
                        android:orientation="vertical"
                        android:padding="@dimen/dimen10dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/product_name"
                            android:textColor="#00a5ff" />

                        <EditText
                            android:id="@+id/productname"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/enter_product_name"
                            android:inputType="textEmailAddress"
                            android:padding="@dimen/dimen10dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen20dp"
                            android:text="@string/price"
                            android:textColor="#00a5ff" />

                        <EditText
                            android:id="@+id/price"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/enter_price"
                            android:inputType="number"
                            android:padding="@dimen/dimen10dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen20dp"
                            android:text="@string/description"
                            android:textColor="#00a5ff" />

                        <EditText
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/add_description"
                            android:inputType="text"
                            android:padding="@dimen/dimen10dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen20dp"
                            android:text="@string/category"
                            android:textColor="#00a5ff" />

                        <androidx.appcompat.widget.AppCompatSpinner
                            android:id="@+id/category_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:padding="@dimen/dimen10dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen20dp"
                            android:text="@string/brand"
                            android:textColor="#00a5ff" />

                        <EditText
                            android:id="@+id/brand"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/enter_brand_name"
                            android:inputType="textEmailAddress"
                            android:padding="@dimen/dimen10dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen20dp"
                            android:text="@string/quantity"
                            android:textColor="#00a5ff" />

                        <EditText
                            android:id="@+id/quantity"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:hint="@string/enter_quantity"
                            android:inputType="textEmailAddress"
                            android:padding="@dimen/dimen10dp" />

                        <ProgressBar
                            android:id="@+id/progress_bar_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:visibility="gone" />


                        <ImageView
                            android:id="@+id/img"
                            android:layout_width="300dp"
                            android:layout_height="200dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginBottom="@dimen/dimen30dp"
                            android:visibility="gone"
                            app:srcCompat="@drawable/ic_launcher_foreground"
                            tools:ignore="VectorDrawableCompat" />


                        <Button
                            android:id="@+id/browse"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="10dp"
                            android:text="@string/add_image" />


                        <Button
                            android:id="@+id/upload"
                            android:layout_width="277dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:background="@drawable/custom_button_border2"
                            android:shadowColor="#FFB6A8A8"
                            android:text="@string/upload_to_server"
                            android:textColor="#FFF"
                            android:textColorLink="#B6A8A8" />
                    </LinearLayout>
                </ScrollView>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
    </ScrollView>
</layout>
